# BroChaperonAI

./: .gitignore  Evaluacion de estrategias EXPO.docx  final de calidad.docx  index.html  main.py  migration_001_create_tasks.sql  pyproject.toml  test_separacion.py
BroChaperonAI/: README.md  main.py  pyproject.toml
BroChaperonAI/BroChaperonAI/: requirements.txt
BroChaperonAI/BroChaperonAI/app/presenters/: chat_presenter.py
BroChaperonAI/app/: .env
BroChaperonAI/app/models/: ai_engine.py
BroChaperonAI/app/views/: main_window.py
BroChaperonAI/tests/: test_suite.py
controlador/: presentador.py
css/: styles.css
js/: app.js  config.js
js/services/: tasks.js
js/ui/: components.js
laravel y php/: README.md  iniciar_servidor.bat  package.json  servidor.js
laravel y php/config/: base_datos.php
laravel y php/controladores/: AuthControlador.php  RegistroControlador.php
laravel y php/migraciones/: crear_tabla_usuarios.php
laravel y php/modelos/: Usuario.php
laravel y php/nucleo/: Enrutador.php
laravel y php/publico/: index.php
laravel y php/publico/css/: estilos.css
laravel y php/rutas/: web.php
laravel y php/vistas/: login.php  panel.php  plantilla.php  registro.php
logica/: _demucs_wrapper.py  convertidor_formato.py  modelos.py  procesador_video.py  separador_audio.py
vista/: __init__.py  componentes.py  ventana_principal.py
