[project]
name = "diversion-codigo"
version = "1.0"
description = "Vocal Remover - Transforma canciones con voces en instrumentales"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "customtkinter>=5.2.2",
    "demucs>=4.0.0",
    "moviepy>=1.0.3",
    "pillow>=10.0.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "soundfile>=0.12.0",
]
